Fixes display filters on mobile

--- a/app/assets/stylesheets/components/financial-diaries/c-demographic-filters.scss
+++ b/app/assets/stylesheets/components/financial-diaries/c-demographic-filters.scss
@@ -1,5 +1,9 @@
 .c-demographic-filters {
-  display: flex;
+  display: none;
+
+  @media #{$mq-tablet} {
+    display: flex;
+  }
 
   .filters > .demographic-item {
     position: relative;
